<resources>
    <string name="app_name">Rentalin Aja</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello  fragment</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="onboarding">Menyediakan mobil rental yang dapat kamu pesan lewat smartphone android</string>
    <string name="kategori_mobil">Kategori</string>
    <string name="nama_mobil">Nama Mobil</string>
    <string name="harga">3500000</string>
    <string name="Rp">Rp.</string>
    <string name="perhari">/hari</string>
    <string name="ratingnya">5.0</string>
    <string name="usernamenya">No Name</string>
    <string name="emailnya">email@gmail.com</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="lengkapi">Edit data diri anda</string>
    <string name="alamatnya">Edit alamat anda</string>
    <string name="alamat">Alamat</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pengaturannya">"Pengaturan "</string>
    <string name="Logout">Logout</string>
    <string name="tipemesin">Automatic</string>
    <string name="liternya">55 Liter</string>
    <string name="orangnya">5 Orang</string>
    <string name="tipemesinya">SUV</string>
    <string name="lokasi">Lokasi Rental</string>
    <string name="tipemobilnya">SUV</string>
    <string name="durasi">Durasi Sewa</string>
    <string name="Totalnya">Total</string>
    <string name="penyewa">Penyewa</string>
    <string name="menunggu">Menunggu Pembayaran</string>
    <string name="detailnya">Mohon lakukan pembayaran sebelum 2 x 24 jam dengan rincian sebagai berikut</string>
    <string name="norek">888-099-4343-4934903</string>
</resources>