<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView

        android:id="@+id/cv_item_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gambar_mobil"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:src="@drawable/gambar_mobil"
                android:background="@drawable/ic_bg_gambar"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/tv_item_title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori_mobil"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:fontFamily="@font/cera_pro"/>

                <TextView
                    android:id="@+id/tv_item_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_mobil"
                    android:textColor="@color/colorFontAbu"
                    android:textSize="14dp"
                    android:fontFamily="@font/cera_light"/>
                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:drawableStart="@drawable/ic_star_1"
                    android:drawablePadding="3dp"
                    android:text="@string/ratingnya"
                    android:textColor="@color/colorFontAbu"
                    android:textSize="14dp"
                    android:fontFamily="@font/cera_light"/>

            </LinearLayout>

            <TextView
                android:id="@+id/rupiah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Rp"
                android:textSize="13sp"
                android:textColor="@color/colorFontAbu"
                />
            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textColor="@color/colorFontAbu"
                android:text="@string/harga"
                android:textAlignment="textEnd"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/perhari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:text="@string/perhari"
                android:textSize="13sp"
                android:textColor="@color/colorFontAbu"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>

