<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".detailMobil"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_logo_kecil" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/gambar_mobil"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/gambar_mobil"
                android:background="@drawable/ic_bg_gambar"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori_mobil"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:fontFamily="@font/cera_pro"/>

                <TextView
                    android:id="@+id/tv_item_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_mobil"
                    android:textColor="@color/colorFontAbu"
                    android:textSize="14dp"
                    android:fontFamily="@font/cera_light"/>
                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:drawableStart="@drawable/ic_star_1"
                    android:drawablePadding="3dp"
                    android:text="@string/ratingnya"
                    android:textColor="@color/colorFontAbu"
                    android:textSize="14dp"
                    android:fontFamily="@font/cera_light"/>

            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/rupiah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rp"
                        android:textSize="13sp"
                        android:textColor="@color/colorFontAbu"
                        />
                    <TextView
                        android:id="@+id/tv_item_description"
                        android:layout_width="55dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:textColor="@color/colorFontAbu"
                        android:text="@string/harga"
                        android:textAlignment="textEnd"
                        android:textSize="13sp" />
                    <TextView
                        android:id="@+id/perhari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="1dp"
                        android:text="@string/perhari"
                        android:textSize="13sp"
                        android:textColor="@color/colorFontAbu"
                        />
                </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                >
                <TextView
                    android:id="@+id/tv_tipe_mesin"
                    android:padding="10dp"
                    android:layout_width="79dp"
                    android:layout_height="70dp"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/ic_tipe_mesin"
                    android:drawablePadding="5dp"
                    android:text="@string/tipemesin"
                    android:textColor="@color/colorFontAbu"
                    android:background="@drawable/ic_bg_gambar"
                    android:textSize="12dp"
                    android:fontFamily="@font/cera_light"/>

                <TextView
                    android:id="@+id/tv_liter"
                    android:layout_marginStart="3dp"
                    android:padding="10dp"
                    android:layout_width="79dp"
                    android:layout_height="70dp"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/ic_liter"
                    android:drawablePadding="5dp"
                    android:text="@string/liternya"
                    android:textColor="@color/colorFontAbu"
                    android:background="@drawable/ic_bg_gambar"
                    android:textSize="12dp"
                    android:fontFamily="@font/cera_light"/>


                <TextView
                    android:id="@+id/tv_orang"
                    android:layout_marginStart="3dp"
                    android:padding="10dp"
                    android:layout_width="79dp"
                    android:layout_height="70dp"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/ic_tipe_mobil"
                    android:drawablePadding="5dp"
                    android:text="@string/orangnya"
                    android:textColor="@color/colorFontAbu"
                    android:background="@drawable/ic_bg_gambar"
                    android:textSize="12dp"
                    android:fontFamily="@font/cera_light"/>

            <TextView
                android:id="@+id/tv_tipe_mobil"
                android:layout_marginStart="3dp"
                android:padding="10dp"
                android:layout_width="79dp"
                android:layout_height="70dp"
                android:textAlignment="center"
                android:drawableTop="@drawable/ic_tipe_mobil"
                android:drawablePadding="5dp"
                android:text="@string/tipemesinya"
                android:textColor="@color/colorFontAbu"
                android:background="@drawable/ic_bg_gambar"
                android:textSize="12dp"
                android:fontFamily="@font/cera_light"/>



            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="270dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:background="@drawable/ic_tombol"
            android:fontFamily="@font/fontcera"
            android:text="Sewa Mobil"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:textSize="16sp" />


</LinearLayout>

