<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profilActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_logo_kecil" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingStart="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/gambar_mobil"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/paijo"
            />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/usernamenya"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:fontFamily="@font/cera_pro"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailnya"
                android:textColor="@color/colorFontAbu"
                android:textSize="14dp"
                android:fontFamily="@font/cera_light"/>


        </LinearLayout>



    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/tv_edit_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profil"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:fontFamily="@font/cera_pro"/>

            <TextView
                android:id="@+id/tv_edit_profil_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/lengkapi"
                android:textColor="@color/colorFontAbu"
                android:textSize="14dp"
                android:fontFamily="@font/cera_light"/>


    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="25dp"
            >

            <TextView
                android:id="@+id/tv_pengaturan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengaturan"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:fontFamily="@font/cera_pro"/>

            <TextView
                android:id="@+id/tv_pengaturan_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/pengaturannya"
                android:textColor="@color/colorFontAbu"
                android:textSize="14dp"
                android:fontFamily="@font/cera_light"/>

        <TextView
            android:id="@+id/tv_logout"
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cera_pro"
            android:text="@string/Logout"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />


    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="25dp"
            >


    </LinearLayout>

</LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_nav"
        app:menu="@menu/menu_navbar">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>