<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/fontcera"
            android:textSize="30sp"
            android:textColor="#ffff"
            android:text="@string/daftar" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_form"
            android:fontFamily="@font/cera_light"
            android:hint="@string/nama"
            android:paddingStart="15dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_form"
            android:fontFamily="@font/cera_light"
            android:hint="@string/email"
            android:paddingStart="15dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_form"
            android:fontFamily="@font/cera_light"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="270dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/ic_tombol"
            android:fontFamily="@font/fontcera"
            android:text="@string/daftar"
            android:textAllCaps="false"
            android:textColor="#00B3A9"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>