<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editProfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_logo_kecil" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/ic_layout_border"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/gambar_mobil"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:src="@drawable/gambar_mobil"
                android:background="@drawable/ic_bg_gambar"
                android:layout_margin="3dp"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/tv_item_title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori_mobil"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:fontFamily="@font/cera_pro"/>

                <TextView
                    android:id="@+id/tv_item_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_mobil"
                    android:textColor="@color/colorFontAbu"
                    android:textSize="14dp"
                    android:fontFamily="@font/cera_light"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/rupiah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rp"
                        android:textSize="13sp"
                        android:textColor="@color/colorFontAbu"
                        />
                    <TextView
                        android:id="@+id/tv_item_description"
                        android:layout_width="55dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:textColor="@color/colorFontAbu"
                        android:text="@string/harga"
                        android:textAlignment="textEnd"
                        android:textSize="13sp" />
                    <TextView
                        android:id="@+id/perhari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="1dp"
                        android:text="@string/perhari"
                        android:textSize="13sp"
                        android:textColor="@color/colorFontAbu"
                        />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/ic_layout_border"
            android:layout_margin="20dp"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:fontFamily="@font/cera_light"
                        android:textColor="@color/colorFontAbu"
                        android:id="@+id/durasinya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/durasi" />

                    <EditText
                        android:id="@+id/inputDurasi"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/ic_layout_border"
                        android:fontFamily="@font/cera_light"
                        android:hint="Masukan durasi hari"
                        android:paddingRight="15dp"
                        android:layout_marginStart="55dp"
                        android:textSize="14sp"
                        android:gravity="end"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:fontFamily="@font/cera_light"
                        android:textColor="@color/colorFontAbu"
                        android:id="@+id/email1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/penyewa" />

                    <TextView
                        android:id="@+id/emailnya"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cera_light"
                        android:textColor="@color/colorFontAbu"
                        android:gravity="end"
                        android:text="@string/email" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cera_pro"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="Total" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/harga"

                        android:fontFamily="@font/cera_pro"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
        <Button
            android:id="@+id/btnLanjut"
            android:layout_width="300dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:background="@drawable/ic_button"
            android:fontFamily="@font/fontcera"
            android:text="Checkout"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>



</RelativeLayout>